Probleme mit Gulp behoben

--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
 	<meta name="description" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+	<script src="js/app.js"></script>
 	<link type="text/css" rel="stylesheet" href="bundesland.css" />
 </head>
 
-<body>
-	<h1>Bundesländer</h1>
-	<ul id="states"></ul>
-	<ul id="persons"></ul>
+<body ng-app="stayfriends">
+	<div class="content" ng-controller="BundeslandIndexController as ctrl">
+		{{ctrl.repo}}
+		<h1 class="header">Bundesländer</h1>
+		<div id="states">
+			<div class="state-container-wrapper">
+				<div class="state-container">
+					<div class="state-name">Berlin</div>
+					<div class="school-count">1337</div>
+				</div>
+			</div>
+		</div>
+		<ul id="persons"></ul>
+	</div>
 </body>
 </html>
