Bundesländer und Personen als HTML abgebildet

--- a/src/js/bundesland/directive/state/state.html
+++ b/src/js/bundesland/directive/state/state.html
@@ -1,10 +1,12 @@
 <div class="state-container-wrapper">
-    <div class="state-container">
-        <div class="state-name">
-            {{state.name}}
-        </div>
-        <div class="school-count">
-            {{state.schoolCount}}
+    <div class="state-container-border">
+        <div class="state-container">
+            <div class="state-name">
+                {{state.name}}
+            </div>
+            <div class="school-count">
+                {{state.schoolCount}} Schulen
+            </div>
         </div>
     </div>
 </div>
