--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html class="">
-<head>
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<title>Testaufgabe - Bundesland</title>
-	<meta name="description" content="" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Testaufgabe - Bundesland</title>
+        <meta name="description" content="" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<script src="js/app.js"></script>
-	<link type="text/css" rel="stylesheet" href="bundesland.css" />
-</head>
+        <script src="js/libs.min.js"></script>
+        <script src="js/app.min.js"></script>
+        <link type="text/css" rel="stylesheet" href="bundesland.css" />
+    </head>
 
-<body ng-app="stayfriends">
-	<div class="content" ng-controller="BundeslandIndexController as ctrl">
-		{{ctrl.repo}}
-		<h1 class="header">Bundesländer</h1>
-		<div id="states">
-			<div class="state-container-wrapper">
-				<div class="state-container">
-					<div class="state-name">Berlin</div>
-					<div class="school-count">1337</div>
-				</div>
-			</div>
-		</div>
-		<ul id="persons"></ul>
-	</div>
-</body>
+    <body ng-app="stayfriends">
+        <div class="content" ng-controller="BundeslandIndexController as ctrl">
+            <h1 class="header">Bundesländer</h1>
+
+            <div id="states">
+                <state ng-repeat="state in ctrl.bundesland.stateList"></state>
+                <clear-left></clear-left>
+            </div>
+
+            <div id="persons">
+                <person ng-repeat="character in ctrl.getAvailableCharacters()"></person>
+            </div>
+        </div>
+    </body>
 </html>
